# SME_Score2

./: .gitignore  DEPLOYMENT.md  README.md  launch.bat
.github/workflows/: backend.yml  frontend.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: __init__.py  admin_routes.py  auth_routes.py  score_routes.py  verify_routes.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: database_models.py
backend/app/schemas/: score_schema.py
backend/app/services/: cache_service.py  qr_service.py  scoring_service.py
backend/backend/data/: companies_dataset.json
backend/backend/migrations/: seed_data.sql
backend/backend/models/: model_v1.pkl  scaler_v1.pkl
backend/migrations/: 001_initial_schema.sql
backend/scripts/: generate_dataset.py  train_model.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: page.tsx
frontend/src/app/(protected)/admin/: page.tsx
frontend/src/app/(protected)/admin/company/[rccm]/: page.tsx
frontend/src/app/(protected)/banque/: page.tsx
frontend/src/app/(protected)/banque/company/[rccm]/: page.tsx
frontend/src/app/(protected)/dashboard/: page.tsx
frontend/src/app/(protected)/dashboard/soumettre/: page.tsx
frontend/src/app/(public)/auth/login/: page.tsx
frontend/src/app/(public)/auth/register/: page.tsx
frontend/src/app/(public)/verify/[token]/: page.tsx
frontend/src/lib/: api.ts  supabase.ts
frontend/src/store/: auth-store.ts
